# agentic-rag-university-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: chunks_preview.json
data/raw/: urls.txt
notebooks/: 01-data-ingestion.ipynb  02_vector_store_creation.ipynb  03_baseline_rag_evaluation.ipynb  04_agentic_rag_planner.ipynb  05_agentic_rag_executor_critic.ipynb  06_final_evaluation_and_analysis.ipynb
results/: vector_store_config.json
