[project]
name = "agentic-rag-university-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
